workloads/stremio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stremio
  namespace: stremio
spec:
  selector:
    app: stremio
  ports:
    - name: server
      protocol: TCP
      port: 11470
      targetPort: 11470
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
