workloads/stremio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stremio
  namespace: stremio
spec:
  ingressClassName: nginx
  rules:
  - host: stremio.192.168.0.24.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stremio
            port:
              number: 8080
  - host: stremio-server.192.168.0.24.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stremio
            port:
              number: 11470
